--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     working_dir: /app
     volumes:
       - ./strapi:/app
+      - ./public:/app/public
     ports:
       - "1337:1337"
     command: >
