--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,12 @@ jobs:
           name: bundle
           path: /tmp/dominosbar
       - name: Deploy project with SSH
-        run: |
-          rsync -avz --exclude 'db/postgres' /home/runner/work/dominosbar/dominosbar/ ***@***:~/ --rsh "ssh -p 22 -i /home/runner/.ssh/deploy_key -o StrictHostKeyChecking=no"
+        uses: easingthemes/ssh-deploy@v2.1.4
+
         env:
+          ARGS: >-  
+            -rltgoDzvO
+            --exclude='./db'
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           REMOTE_HOST: ${{ secrets.SSH_HOST }}
           REMOTE_USER: ${{ secrets.SSH_USER }}
