--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,44 +3,44 @@ name: SSH File Copy
 on:
   push:
     branches:
-      - main # Adjust branch name if needed
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Download project from git
+      - name: Download project from Git
         uses: actions/checkout@v2
       - name: Build project
         run: |
           make prod-install
       - name: Prepare files
         run: |
-          sudo cp -r /home/runner/work/dominosbar/dominosbar/ /tmp/dominosbar
-          sudo chown -R runner:runner /tmp
-      - name: Download project as artifact
-        uses: actions/upload-artifact@master
+          mkdir -p /tmp/dominosbar
+          cp -r $GITHUB_WORKSPACE/dominosbar /tmp/dominosbar
+      - name: Upload project as artifact
+        uses: actions/upload-artifact@v3
         with:
           name: bundle
           path: /tmp/dominosbar
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Downlaod artifact
-        uses: actions/download-artifact@master
+      - name: Download artifact
+        uses: actions/download-artifact@v3
         with:
           name: bundle
           path: /tmp/dominosbar
       - name: Deploy project with SSH
         uses: easingthemes/ssh-deploy@v2.1.4
-       
         env:
           ARGS: '-rltgoDzvO'
           EXCLUDE: "/db/postgres/"
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           REMOTE_HOST: ${{ secrets.SSH_HOST }}
           REMOTE_USER: ${{ secrets.SSH_USER }}
-          SOURCE: "../../../../../tmp/dominosbar"
+          SOURCE: "/tmp/dominosbar"
           TARGET: "~/"
