--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Prepare files
         run: |
           mkdir -p /tmp/dominosbar
-          sudo cp -r $GITHUB_WORKSPACE/* /tmp/dominosbar
+          rsync -av --exclude='db/postgres' $GITHUB_WORKSPACE/ /tmp/dominosbar
       - name: Upload project as artifact
         uses: actions/upload-artifact@v3
         with:
