--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: bundle
-          path: /tmp/dominosbar
+          path: dist
       - name: Deploy project with SSH
         uses: easingthemes/ssh-deploy@v2.1.4
         env:
