--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,8 @@ name: SSH File Copy
 on:
   push:
     branches:
-      - main
+      - main # Adjust branch name if needed
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,14 +12,28 @@ jobs:
     steps:
       - name: Download project from Git
         uses: actions/checkout@v2
-      - name: Test build project
+      - name: Build project
         run: |
           make prod-install
+      - name: Prepare files
+        run: |
+          mkdir -p dist
+          rsync -av --exclude='db/postgres' --exclude='react/node_modules' --exclude='react/.next' ./ dist/
+      - name: Upload project as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: bundle
+          path: dist
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: bundle
+          path: dist
       - name: Deploy project with SSH
         uses: easingthemes/ssh-deploy@v2.1.4
         env:
@@ -27,12 +42,5 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           REMOTE_HOST: ${{ secrets.SSH_HOST }}
           REMOTE_USER: ${{ secrets.SSH_USER }}
-          SOURCE: "."
+          SOURCE: "dist/"
           TARGET: "~/dominosbar"
-      - name: Run Build Commands on Server
-        run: |
-          ssh -i /home/runner/.ssh/deploy_key -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
-            cd ~/dominosbar
-            git pull origin main
-            make prod-install
-          EOF
