--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     ports:
       - "3000:3000"
     command: >
-      sh -c "npm install && npm run build && npm run start"
+      sh -c "npm install --force && npm run build && npm run start"
 
   strapi:
     image: node:20
